<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/cancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add_new_entry"
        android:layout_alignBottom="@+id/add_new_entry"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/add_new_entry"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="33dp"
        android:layout_toLeftOf="@+id/cancel"
        android:text="@string/add_new_entry" />

    <EditText
        android:id="@+id/review"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_above="@+id/ratingBar1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/review"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/review"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="date" />

    <EditText
        android:id="@+id/winery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/year"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/winery"
        android:inputType="text" />
    
    <EditText
        android:id="@+id/wine_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/winery"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/wine_name"
        android:inputType="text" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_from_phone"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button_camera"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/button_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/add_new_entry"
        android:text="Camera" />

    <Button
        android:id="@+id/button_from_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_camera"
        android:layout_toRightOf="@+id/imageView"
        android:text="Gallery" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancel"
        android:layout_alignLeft="@+id/add_new_entry" />

</RelativeLayout>
