<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/wineName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/view_wind_title_default"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/wine_view_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.getuncorkedapp.utils.WebImageView
            android:id="@+id/wineIcon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.98"
            android:contentDescription="@string/wine_img_content_desc"
            android:src="@drawable/ic_launcher"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/wineryAndYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/winery_and_year"
                android:textSize="@dimen/winery_and_year_size" />

            <RatingBar
                android:id="@+id/view_wine_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="0.5" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/new_review_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_button_text" />

    <ListView
        android:id="@+id/reviewList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>